# logo_design_project

./: .gitignore  README.md  manage.py  pyproject.toml
column/: admin.py  apps.py  models.py  urls.py  views.py
column/migrations/: 0001_initial.py
logo_design_app/: admin.py  apps.py  models.py  views.py
logo_design_app/migrations/: 0001_initial.py  0002_post_thumbnail.py  0003_survey.py  0004_survey_phone.py  0005_review.py  0006_portfolio_survey_created_at.py  0007_column.py  0008_delete_portfolio.py
logo_design_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
notice/: urls.py  views.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
review/: admin.py  models.py  urls.py  views.py
review/migrations/: 0001_initial.py
static/css/: style.css  style_post_add.css  style_post_detail.css  taeus-logo-design-template.webflow.css
static/css/survey/: taeus-logo-design-template.webflow.css
static/js/: webflow.js
static/work/: project-1.html  project-2.html  project-3.html  project-4.html
survey/: admin.py  models.py  urls.py  views.py
survey/migrations/: 0001_initial.py
templates/: index.html  index2.html  post_add.html  post_detail.html  post_list.html  survey_form.html
templates/main/: 401.html  404.html  about.html  add-column.html  add-notice.html  add-portfolio.html  base.html  column.html  column_detail.html  index.html  login.html  notice.html  notice_detail.html  portfolio.html  review.html  signin.html  survey_form.html
templates/sample/: index.html  post_add.html
(+7 files in other folders)
